// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mobile SendPreview snapshots locks the Cloud invite rendered tree for legacy direct-provider input 1`] = `
<View
  style={
    {
      "backgroundColor": "#212121",
      "borderColor": "rgba(244, 244, 244, 0.24)",
      "borderRadius": 8,
      "borderWidth": 1,
      "gap": 6,
      "padding": 10,
    }
  }
  testID="send-preview"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      color="#60a5fa"
      size={14}
      testID="icon-cloud"
    />
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#f4f4f4",
          "flex": 1,
          "fontSize": 12,
          "fontWeight": "600",
        }
      }
    >
      Sign in for AGI Cloud
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#171717",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 9999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 3,
          "paddingHorizontal": 6,
          "paddingVertical": 2,
        }
      }
    >
      <View
        color="rgba(244, 244, 244, 0.74)"
        size={10}
        testID="icon-lock"
      />
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 9,
            "fontWeight": "700",
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          }
        }
      >
        Cloud
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "rgba(244, 244, 244, 0.74)",
        "fontSize": 11,
        "lineHeight": 15,
      }
    }
  >
    Sign in to use AGI Cloud chat. Local Mode stays available on this device.
  </Text>
</View>
`;

exports[`Mobile SendPreview snapshots locks the Local turn rendered tree 1`] = `
<View
  style={
    {
      "backgroundColor": "#212121",
      "borderColor": "rgba(16, 163, 127, 0.36)",
      "borderRadius": 8,
      "borderWidth": 1,
      "gap": 6,
      "padding": 10,
    }
  }
  testID="send-preview"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      color="#10a37f"
      size={14}
      testID="icon-hard-drive"
    />
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#f4f4f4",
          "flex": 1,
          "fontSize": 12,
          "fontWeight": "600",
        }
      }
    >
      Stays on this device
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#171717",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 9999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 3,
          "paddingHorizontal": 6,
          "paddingVertical": 2,
        }
      }
    >
      <View
        color="rgba(244, 244, 244, 0.74)"
        size={10}
        testID="icon-lock"
      />
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 9,
            "fontWeight": "700",
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          }
        }
      >
        Local
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "rgba(244, 244, 244, 0.48)",
        "fontSize": 10,
      }
    }
  >
    Llama 3.2 8B
  </Text>
  <Text
    style={
      {
        "color": "rgba(244, 244, 244, 0.74)",
        "fontSize": 11,
        "lineHeight": 15,
      }
    }
  >
    The model runs on your device. Nothing is uploaded unless you choose Cloud.
  </Text>
  <View
    accessibilityLabel="Show send details"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "flexDirection": "row",
        "gap": 4,
      }
    }
  >
    <View
      color="rgba(244, 244, 244, 0.48)"
      size={12}
      testID="icon-chevron-down"
    />
    <Text
      style={
        {
          "color": "rgba(244, 244, 244, 0.48)",
          "fontSize": 9,
          "fontWeight": "700",
          "letterSpacing": 0.5,
          "textTransform": "uppercase",
        }
      }
    >
      Show details
    </Text>
  </View>
</View>
`;

exports[`Mobile SendPreview snapshots locks the Managed turn rendered tree 1`] = `
<View
  style={
    {
      "backgroundColor": "#212121",
      "borderColor": "rgba(244, 244, 244, 0.24)",
      "borderRadius": 8,
      "borderWidth": 1,
      "gap": 6,
      "padding": 10,
    }
  }
  testID="send-preview"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <View
      color="#60a5fa"
      size={14}
      testID="icon-cloud"
    />
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#f4f4f4",
          "flex": 1,
          "fontSize": 12,
          "fontWeight": "600",
        }
      }
    >
      Sent to gateway.agiworkforce.com
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#171717",
          "borderColor": "rgba(255, 255, 255, 0.10)",
          "borderRadius": 9999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 3,
          "paddingHorizontal": 6,
          "paddingVertical": 2,
        }
      }
    >
      <View
        color="rgba(244, 244, 244, 0.74)"
        size={10}
        testID="icon-lock"
      />
      <Text
        style={
          {
            "color": "rgba(244, 244, 244, 0.74)",
            "fontSize": 9,
            "fontWeight": "700",
            "letterSpacing": 0.5,
            "textTransform": "uppercase",
          }
        }
      >
        Managed
      </Text>
    </View>
  </View>
  <Text
    style={
      {
        "color": "rgba(244, 244, 244, 0.48)",
        "fontSize": 10,
      }
    }
  >
    AGI Pro
  </Text>
  <Text
    style={
      {
        "color": "rgba(244, 244, 244, 0.74)",
        "fontSize": 11,
        "lineHeight": 15,
      }
    }
  >
    Managed turn. The request, attachments, and system prompt go through gateway.agiworkforce.com subject to the managed-mode retention and access controls.
  </Text>
</View>
`;
